--- a/index.html
+++ b/index.html
@@ -9,50 +9,52 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <div>
             <span class="menu-dash"></span>
             <span>GENERAL ENGLISH</span>
             <span>TOEIC</span>
             <span>IELTS</span>
         </div>
-        <img src="./images/logo.png" alt="alt ielts logo">
+        <img src="./assets/images/logo.png" alt="alt ielts logo">
         <div class="login">
             <span>Login</span>
             <button class="btn login-btn">Get Started</button>
         </div>
-    </nav>
+    </nav> -->
     <div class="main-container">
         <section class="sec sec1">
             <div class="container">
                 <div class='top-header'>
-                    <img class="logo" title="alt ielts logo" src="./images/logo.png" alt="alt ielts logo"/>
+                    <div class="logo">
+                        <img title="alt ielts logo" src="./assets/images/logo.png" alt="alt ielts logo" />
+                    </div>
                     <!-- <div class="login">
                         <a href="#">
-                            <img class="language-icon" alt="alt ielts" src="./images/vn.png" />
+                            <img class="language-icon" alt="alt ielts" src="./assets/images/vn.png" />
                         </a>
                         <button class="btn login-btn">Login</button>
                     </div> -->
                 </div>
-            </div>
-            <div class="intro-container">
-                <div class="burble">
-                    <img src="./images/burble.png" alt="alt ielts">
-                </div>
-                <div class="intro-content">
-                    <h2 class="text-white lg-title intro-title">Increase Your English Level</h2>
-                    <div>
-                        <p class="text-white intro-text">I want to learn...</p>
-                        <div class="btn-ls">
-                            <button class="btn intro-btn">General English</button>
-                            <button class="btn intro-btn">IELTS</button>
-                            <button class="btn intro-btn">TOEIC</button>
+                <div class="intro-container">
+                    <div class="burble">
+                        <img src="./assets/images/burble.png" alt="alt ielts">
                     </div>
-                        <p class="text-white sm-text">No purchase necessary</p>
+                    <div class="intro-content">
+                        <h2 class="text-white lg-title intro-title">Increase Your English Level</h2>
+                        <div>
+                            <p class="text-white intro-text">I want to learn...</p>
+                            <div class="btn-ls">
+                                <button class="btn intro-btn">General English</button>
+                                <button class="btn intro-btn">IELTS</button>
+                                <button class="btn intro-btn">TOEIC</button>
+                        </div>
+                            <p class="text-white sm-text">No purchase necessary</p>
+                        </div>
                     </div>
-                </div>
-                <div class="girl">
-                    <img src="./images/girl.png" alt="">
+                    <div class="girl">
+                        <img src="./assets/images/girl.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -93,7 +95,7 @@
                         </article>
                         <div class="clearfix"></div>
                     </div>
-                    <img class="computer-img" src="./images/computer.png" alt="alt ielts">
+                    <img class="computer-img" src="./assets/images/computer.png" alt="alt ielts">
                 </div>
                 <div class="practice">
                     <h2 class="title">Practice Makes Perfect</h2>
