--- a/index.html
+++ b/index.html
@@ -1,139 +1,140 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-    <script src="js/main.js"></script>
-</head>
-<body>
-    <!-- <nav>
-        <div>
-            <span class="menu-dash"></span>
-            <span>GENERAL ENGLISH</span>
-            <span>TOEIC</span>
-            <span>IELTS</span>
-        </div>
-        <img src="./assets/images/logo.png" alt="alt ielts logo">
-        <div class="login">
-            <span>Login</span>
-            <button class="btn login-btn">Get Started</button>
-        </div>
-    </nav> -->
-    <div class="main-container">
-        <section class="sec sec1">
-            <div class="container">
-                <div class='top-header'>
-                    <div class="logo">
-                        <img title="alt ielts logo" src="./assets/images/logo.png" alt="alt ielts logo" />
-                    </div>
-                    <!-- <div class="login">
-                        <a href="#">
-                            <img class="language-icon" alt="alt ielts" src="./assets/images/vn.png" />
-                        </a>
-                        <button class="btn login-btn">Login</button>
-                    </div> -->
-                </div>
-                <div class="intro-container">
-                    <div class="burble">
-                        <img src="./assets/images/burble.png" alt="alt ielts">
-                    </div>
-                    <div class="intro-content">
-                        <h2 class="text-white lg-title intro-title">Increase Your English Level</h2>
-                        <div>
-                            <p class="text-white intro-text">I want to learn...</p>
-                            <div class="btn-ls">
-                                <button class="btn intro-btn">General English</button>
-                                <button class="btn intro-btn">IELTS</button>
-                                <button class="btn intro-btn">TOEIC</button>
-                        </div>
-                            <p class="text-white sm-text">No purchase necessary</p>
-                        </div>
-                    </div>
-                    <div class="girl">
-                        <img src="./assets/images/girl.png" alt="">
-                    </div>
-                </div>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Page Title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/mouse-effect.css">
+    </head>
+    <body>
+        <!-- <nav>
+            <div>
+                <span class="menu-dash"></span>
+                <span>GENERAL ENGLISH</span>
+                <span>TOEIC</span>
+                <span>IELTS</span>
             </div>
-        </section>
-        <section class="sec sec2">
-            <div class="container">
-                <div class="knowledge">
-                    <h2 class="title">Widen your knowledge - Broaden your connection</h2>
-                    <div class="grid">
-                        <article class="col col-6 ite">
-                            <h3 class="sub-title">Free To Use</h3>
-                            <p class="content">
-                                Thousand practice tests, thousand helpful books
-                                with thousand tips and strategies are totally free
-                                for users.
-                            </p>
-                        </article>
-                        <article class="col col-6 item">
-                            <h3 class="sub-title">Community-driven</h3>
-                            <p class="content">
-                                Created by our community of English teachers, previous
-                                IELTS/TOEIC examiners and IELTS/ TOEIC exam takers.
-                            </p>
-                        </article>
-                        <article class="col col-6 item">
-                            <h3 class="sub-title">View Score And Answer Explanations</h3>
-                            <p class="content">
-                                After taking our IELTS mock tests with real audio, you can
-                                check your Listening or Reading band score and view
-                                your answer sheets.
-                            </p>
-                        </article>
-                        <article class="col col-6 item">
-                            <h3 class="sub-title">IELTS Writing & Speaking Evaluation Service</h3>
-                            <p class="content">
-                                A small fee for a huge success. You will receivce your IELTS
-                                Writing and Speaking score within 24 hours.
-                            </p>
-                        </article>
-                        <div class="clearfix"></div>
-                    </div>
-                    <img class="computer-img" src="./assets/images/computer.png" alt="alt ielts">
-                </div>
-                <div class="practice">
-                    <h2 class="title">Practice Makes Perfect</h2>
-                    <div class="grid">
-                        <div class="col col-4 item">
-                            <h3 class="sub-title">General English</h3>
-                            <p class="content">
-                                Improve your English skills with hundreds
-                                of exercises on topics that you might run
-                                into difficult in learing process.
-                            </p>
-                            <a class="practice-link" href="#">Practice</a>
-                        </div>
-                        <div class="col col-4 item">
-                            <h3 class="sub-title">TOEIC</h3>
-                            <p class="content">
-                                2019 of IIG. After taking our TOEIC test,
-                                you can recieve your score and know the
-                                answer immediately
-                            </p>
-                            <a class="practice-link" href="#">Practice</a>
-                        </div>
-                        <div class="col col-4 item">
-                            <h3 class="sub-title">IELTS</h3>
-                            <p class="content">
-                                More than 3 million IELTS tests were
-                                taken in the past year. Practice
-                                Listening, Speaking, Reading and
-                                Writing in the most convenient way right
-                                here right now.
-                            </p>
-                            <a class="practice-link" href="#">Practice</a>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
+            <img src="./assets/images/logo.png" alt="alt ielts logo">
+            <div class="login">
+                <span>Login</span>
+                <button class="btn login-btn">Get Started</button>
             </div>
-        </section>
-    </div>
-</body>
+        </nav> -->
+        <div class="main-container">
+            <section class="sec sec1">
+                <div class="container">
+                    <div class='top-header'>
+                        <div class="logo">
+                            <img title="alt ielts logo" src="./assets/images/logo.png" alt="alt ielts logo" />
+                        </div>
+                        <!-- <div class="login">
+                            <a href="#">
+                                <img class="language-icon" alt="alt ielts" src="./assets/images/vn.png" />
+                            </a>
+                            <button class="btn login-btn">Login</button>
+                        </div> -->
+                    </div>
+                    <div class="intro-container">
+                        <div class="burble">
+                            <img src="./assets/images/burble.png" alt="alt ielts">
+                        </div>
+                        <div class="intro-content">
+                            <h2 class="text-white lg-title intro-title">Increase Your English Level</h2>
+                            <div>
+                                <p class="text-white intro-text">I want to learn...</p>
+                                <div class="btn-ls">
+                                    <button class="btn intro-btn">General English</button>
+                                    <button class="btn intro-btn">IELTS</button>
+                                    <button class="btn intro-btn">TOEIC</button>
+                            </div>
+                                <p class="text-white sm-text">No purchase necessary</p>
+                            </div>
+                        </div>
+                        <div class="girl">
+                            <img src="./assets/images/girl.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="sec sec2">
+                <div class="container">
+                    <div class="knowledge">
+                        <h2 class="title">Widen your knowledge - Broaden your connection</h2>
+                        <div class="grid">
+                            <article class="col col-6 ite">
+                                <h3 class="sub-title">Free To Use</h3>
+                                <p class="content">
+                                    Thousand practice tests, thousand helpful books
+                                    with thousand tips and strategies are totally free
+                                    for users.
+                                </p>
+                            </article>
+                            <article class="col col-6 item">
+                                <h3 class="sub-title">Community-driven</h3>
+                                <p class="content">
+                                    Created by our community of English teachers, previous
+                                    IELTS/TOEIC examiners and IELTS/ TOEIC exam takers.
+                                </p>
+                            </article>
+                            <article class="col col-6 item">
+                                <h3 class="sub-title">View Score And Answer Explanations</h3>
+                                <p class="content">
+                                    After taking our IELTS mock tests with real audio, you can
+                                    check your Listening or Reading band score and view
+                                    your answer sheets.
+                                </p>
+                            </article>
+                            <article class="col col-6 item">
+                                <h3 class="sub-title">IELTS Writing & Speaking Evaluation Service</h3>
+                                <p class="content">
+                                    A small fee for a huge success. You will receivce your IELTS
+                                    Writing and Speaking score within 24 hours.
+                                </p>
+                            </article>
+                            <div class="clearfix"></div>
+                        </div>
+                        <img class="computer-img" src="./assets/images/computer.png" alt="alt ielts">
+                    </div>
+                    <div class="practice">
+                        <h2 class="title">Practice Makes Perfect</h2>
+                        <div class="grid">
+                            <div class="col col-4 item">
+                                <h3 class="sub-title">General English</h3>
+                                <p class="content">
+                                    Improve your English skills with hundreds
+                                    of exercises on topics that you might run
+                                    into difficult in learing process.
+                                </p>
+                                <a class="practice-link" href="#">Practice</a>
+                            </div>
+                            <div class="col col-4 item">
+                                <h3 class="sub-title">TOEIC</h3>
+                                <p class="content">
+                                    2019 of IIG. After taking our TOEIC test,
+                                    you can recieve your score and know the
+                                    answer immediately
+                                </p>
+                                <a class="practice-link" href="#">Practice</a>
+                            </div>
+                            <div class="col col-4 item">
+                                <h3 class="sub-title">IELTS</h3>
+                                <p class="content">
+                                    More than 3 million IELTS tests were
+                                    taken in the past year. Practice
+                                    Listening, Speaking, Reading and
+                                    Writing in the most convenient way right
+                                    here right now.
+                                </p>
+                                <a class="practice-link" href="#">Practice</a>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </body>
+    <script src="js/mouse-effect.js"></script>
 </html>
