--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="css/mouse-effect.css">
     </head>
     <body>
-        <nav>
+        <nav id="fixedNav">
             <div class="container">
                 <div class="nav-ls">
                     <div class="dash-group">
@@ -149,6 +149,7 @@
                 </div>
             </section>
         </div>
+        <div id="cursor" class="cursor">
     </body>
     <script src="js/mouse-effect.js"></script>
     <script src="js/main.js"></script>
